[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
config = "0.15.22"
serde = { version = "1", features = ["derive"]}
chrono = "0.4.44"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "1.23.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dev-dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
